added colour variables

--- a/web-portfolio-2024/src/styles.scss
+++ b/web-portfolio-2024/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+$theme-background: #0b2027;
+$theme-text: #f7f3e3;
+$theme-primary: #47b3ff;
+$theme-secondary: #1d7874;
+$theme-accent: #09bc8a;
+
+body {
+  width: 100vw;
+  min-height:100vh;
+  margin: 0;
+  background-color: $theme-background;
+}
