--- a/web-portfolio-2024/src/app/main-page/main-page.component.html
+++ b/web-portfolio-2024/src/app/main-page/main-page.component.html
@@ -1,1 +1,8 @@
-<p>main-page works!</p>
+
+<div id="main-page">
+  <app-hero></app-hero>
+  <app-bio></app-bio>
+  <app-work></app-work>
+  <app-projects></app-projects>
+  <app-education></app-education>
+</div>
