--- a/web-portfolio-2024/src/app/header/header.component.html
+++ b/web-portfolio-2024/src/app/header/header.component.html
@@ -1,8 +1,14 @@
 
 <h1>Ben Taylor</h1>
 
+<!-- Mobile -->
+<nav id="hamburger">
+  <div class="hamburger-line"></div>
+  <div class="hamburger-line"></div>
+  <div class="hamburger-line"></div>
+</nav>
+
 <nav>
-  <!-- Mobile -->
 
 
   <!-- Desktop -->
