--- a/web-portfolio-2024/src/app/header/header.component.html
+++ b/web-portfolio-2024/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <h1>Ben Taylor</h1>
 
 <!-- Mobile -->
-<nav
+<div
   id="hamburger"
   (click)="toggleHamburger()"
   [ngClass]="{'active': isHamburgerActive}">
@@ -11,10 +11,16 @@
   <div class="hamburger-line" id="middle"></div>
   <div class="hamburger-line" id="bottom"></div>
 
-</nav>
+</div>
 
-<nav>
+<nav
+  [ngClass]="{'active': isHamburgerActive}">
 
+  <section>
+    <a>Bio</a>
+    <a>Work</a>
+    <a>Projects</a>
+    <a>Education</a>
+  </section>
 
-  <!-- Desktop -->
 </nav>
