--- a/web-portfolio-2024/src/app/header/header.component.scss
+++ b/web-portfolio-2024/src/app/header/header.component.scss
@@ -5,6 +5,8 @@ h1 {
   top: 0;
   z-index: 10;
   color: $theme-text;
+  background-color: $theme-background;
+  width: 100%;
   margin: 0;
   padding: 1rem;
   font-size: 3rem;
