--- a/web-portfolio-2024/src/app/header/header.component.scss
+++ b/web-portfolio-2024/src/app/header/header.component.scss
@@ -1,15 +1,23 @@
 @import "src/theme";
 
-h1 {
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  color: $theme-text;
-  background-color: $theme-background;
+a {
   width: 100%;
-  margin: 0;
-  padding: 1rem;
-  font-size: 3rem;
+
+  h1 {
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    font-size: 3rem;
+    margin: 0;
+    padding: 1rem;
+    color: $theme-text;
+    background-color: $theme-background;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $theme-accent;
+    }
+  }
 }
 
 div#hamburger {
@@ -91,15 +99,21 @@ nav#standard-nav {
   justify-content: right;
 
   section {
+    height: 100%;
     z-index: 15;
     display: flex;
-    font-size: 1.5rem;
-    padding: 1rem;
-    padding-top: 1.75rem;
-    gap: 1rem;
 
     a {
+      cursor: pointer;
+      font-size: 1.5rem;
+      padding: 1.75rem;
+      width: 100%;
+      height: 100%;
       color: $theme-text;
+
+      &:hover {
+        background-color: $theme-accent;
+      }
     }
   }
 }
