--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -2,8 +2,7 @@
 <section id="hero">
   <mat-grid-list cols="2" rowHeight="2:1">
     <mat-grid-tile>1</mat-grid-tile>
-    <mat-grid-tile>2</mat-grid-tile>
+    <mat-grid-tile rowspan="2">2</mat-grid-tile>
     <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
   </mat-grid-list>
 </section>
