--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
@@ -9,6 +9,12 @@ section#hero {
 
     mat-grid-tile {
       background-color: lightblue;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
     }
   }
 }
