basic hero layout

--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -2,7 +2,12 @@
 <section id="hero">
   <mat-grid-list cols="2" rowHeight="2:1">
 
-    <mat-grid-tile>1</mat-grid-tile>
+    <mat-grid-tile>
+      <h2>Ben Taylor</h2>
+      <p>
+        Software Engineer and Computer Science Student
+      </p>
+    </mat-grid-tile>
 
     <mat-grid-tile rowspan="2">
       <img
@@ -10,7 +15,14 @@
         alt="Ben speaking at a Java tutoring session" />
     </mat-grid-tile>
 
-    <mat-grid-tile>3</mat-grid-tile>
+    <mat-grid-tile>
+      <p>C#, TypeScript, Python,</p>
+      <p>React, Angular</p>
+
+      <div id="social-media-container">
+        ...
+      </div>
+    </mat-grid-tile>
 
   </mat-grid-list>
 </section>
