Hero text styling

--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -4,9 +4,11 @@
 
     <mat-grid-tile>
       <h2>Ben Taylor</h2>
-      <p>
-        Software Engineer and Computer Science Student
-      </p>
+
+      <div id="occupation-container">
+        <p>Software Engineer and</p>
+        <p>Computer Science Student</p>
+      </div>
     </mat-grid-tile>
 
     <mat-grid-tile rowspan="2">
@@ -16,8 +18,10 @@
     </mat-grid-tile>
 
     <mat-grid-tile>
-      <p>C#, TypeScript, Python,</p>
-      <p>React, Angular</p>
+      <div id="technologies-container">
+        <p>C#, TypeScript, Python,</p>
+        <p>React, Angular</p>
+      </div>
 
       <div id="social-media-container">
         ...
