--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
@@ -14,6 +14,22 @@ section#hero {
         flex-direction: column;
       }
 
+      #occupation-container, #technologies-container {
+        text-align: center;
+
+        * {
+          margin: 0;
+        }
+      }
+
+      h2 {
+        font-size: min(4vw, 3.5rem);
+      }
+
+      p {
+        font-size: min(2.5vw, 2rem);
+      }
+
       img {
         max-width: 100%;
         max-height: 100%;
