--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -37,7 +37,7 @@
       </div>
 
       <div id="social-media-container">
-        ...
+        <app-icon name="LinkedIn" />
       </div>
     </mat-grid-tile>
 
