added GitHub and YouTube icons

--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -38,6 +38,8 @@
 
       <div id="social-media-container">
         <app-icon name="LinkedIn" />
+        <app-icon name="GitHub" />
+        <app-icon name="YouTube" />
       </div>
     </mat-grid-tile>
 
