--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
@@ -49,6 +49,14 @@ section#hero {
         max-height: 100%;
       }
 
+      #social-media-container {
+        display: flex;
+        justify-content: space-around;
+        width: 10rem;
+        height: 10rem;
+        margin-top: 1rem;
+      }
+
     }
   }
 }
