added social media links

--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.html
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.html
@@ -37,9 +37,17 @@
       </div>
 
       <div id="social-media-container">
-        <app-icon name="LinkedIn" />
-        <app-icon name="GitHub" />
-        <app-icon name="YouTube" />
+        <a href="{{linkedinLink}}">
+          <app-icon name="LinkedIn" />
+        </a>
+
+        <a href="{{githubLink}}">
+          <app-icon name="GitHub" />
+        </a>
+
+        <a href="{{youtubeLink}}">
+          <app-icon name="YouTube" />
+        </a>
       </div>
     </mat-grid-tile>
 
