--- a/web-portfolio-2024/src/app/header/header.component.html
+++ b/web-portfolio-2024/src/app/header/header.component.html
@@ -22,10 +22,18 @@
     [ngClass]="{'hidden': !isMobile, 'active': isHamburgerActive}">
 
     <section>
-      <a>Bio</a>
-      <a>Work</a>
-      <a>Projects</a>
-      <a>Education</a>
+      <a>
+        <p>Bio</p>
+      </a>
+      <a>
+        <p>Work</p>
+      </a>
+      <a>
+        <p>Projects</p>
+      </a>
+      <a>
+        <p>Education</p>
+      </a>
     </section>
 
   </nav>
