--- a/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
+++ b/web-portfolio-2024/src/app/main-page/hero/hero.component.scss
@@ -43,11 +43,6 @@ section#hero {
         font-size: min(2.5vw, 2rem);
       }
 
-      img {
-        max-width: 100%;
-        max-height: 100%;
-      }
-
       #social-media-container {
         display: flex;
         justify-content: space-around;
@@ -57,5 +52,9 @@ section#hero {
       }
 
     }
+  }
+
+  img {
+    width: 80%;
   }
 }
