added content for Work section

--- a/web-portfolio-2024/src/app/main-page/work/work.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work.component.html
@@ -1,1 +1,31 @@
-<p>work works!</p>
+
+
+<!--
+Content:
+  Software Engineering:
+    Scuderia AlphaTauri / Racing Bulls F1 (Aero Systems Software Engineer):
+      Between the second and final year of my BSc Computer Science
+      degree, I worked as a Software Engineer in the Aero Systems
+      Group Red Bull's second Formula 1 team.
+      I took ownership of 3 projects: a hardware + software pressure
+      tap testing suite with a Beckhoff PLC and a WPF-based UI;
+      a TV video stream system with Raspberry Pis and a C#
+      controller with a JavaScript UI; and a CRUD application for
+      monitoring Wind Tunnel tyres using C#, SQL Server, and JavaScript.
+      I was also involved in a number of IT tasks such as setting up
+      computer systems for new employees; setting up-, recording- and
+      editing videos promoting the internship program uploaded to LinkedIn;
+      and reimaging PCs and Laptops.
+
+  Tutoring:
+    Oxford Brookes University (Lead PAL Tutor):
+      During the second year of my BSc Computer Science degree, I lead the
+      Peer Assisted Learning programme for the Computing department.
+      The programme involves second-year students assisting the year below with
+      first-year content. Given my prior tutoring experience and performance
+      in the first year, I felt confident to lead the programme which involved
+      coordinating session availability with the other 4 tutors, passing on
+      feedback to the university supervisor, and tutoring first-year students
+      on Python and Java programming concepts, mathematics, logic gates and more.
+
+-->
