work section grid

--- a/web-portfolio-2024/src/app/main-page/work/work.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work.component.html
@@ -1,4 +1,22 @@
 
+<section id="work">
+
+  <mat-grid-list
+    cols="{{columnCount}}"
+    rowHeight="2:1">
+
+    <mat-grid-tile>
+      work
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+      test
+    </mat-grid-tile>
+
+  </mat-grid-list>
+
+</section>
+
 
 <!--
 Content:
