added work entry

--- a/web-portfolio-2024/src/app/main-page/work/work.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work.component.html
@@ -6,11 +6,11 @@
     rowHeight="2:1">
 
     <mat-grid-tile>
-      work
+      <app-work-entry />
     </mat-grid-tile>
 
     <mat-grid-tile>
-      test
+      <app-work-entry />
     </mat-grid-tile>
 
   </mat-grid-list>
