--- a/web-portfolio-2024/src/app/main-page/work/work.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work.component.html
@@ -6,11 +6,19 @@
     rowHeight="2:1">
 
     <mat-grid-tile>
-      <app-work-entry />
+
+      <app-work-entry
+        title="test">
+
+
+      </app-work-entry>
+
     </mat-grid-tile>
 
     <mat-grid-tile>
+
       <app-work-entry />
+
     </mat-grid-tile>
 
   </mat-grid-list>
