added category to work entry

--- a/web-portfolio-2024/src/app/main-page/work/work.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work.component.html
@@ -8,7 +8,11 @@
     <mat-grid-tile>
 
       <app-work-entry
-        title="test">
+        category="Software Engineering"
+        company="testCompany"
+        role="testRole"
+        dates="testDate"
+        logoUrl="">
 
 
       </app-work-entry>
