--- a/web-portfolio-2024/src/app/main-page/work/work-entry/work-entry.component.html
+++ b/web-portfolio-2024/src/app/main-page/work/work-entry/work-entry.component.html
@@ -1,9 +1,16 @@
 
 <article>
   <h1>{{category}}</h1>
-  <img [src]="logoUrl" [alt]="imageAlt" />
-  <h2>{{company}}</h2>
+
+  <div class="companyNameAndLogo">
+    <img [src]="logoUrl" [alt]="imageAlt" />
+    <h2>{{company}}</h2>
+  </div>
+
   <h3>{{role}}</h3>
   <p>{{dates}}</p>
-  <ng-content />
+
+  <p>
+    <ng-content />
+  </p>
 </article>
