added project entry

--- a/web-portfolio-2024/src/app/main-page/projects/projects.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/projects.component.html
@@ -1,7 +1,16 @@
 
 <section id="projects">
 
-  <mat-grid-list>
+  <mat-grid-list
+    cols="1">
+
+    <mat-grid-tile>
+
+      <app-project-entry>
+
+      </app-project-entry>
+
+    </mat-grid-tile>
 
   </mat-grid-list>
 
