--- a/web-portfolio-2024/src/app/main-page/projects/projects.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/projects.component.html
@@ -1,12 +1,19 @@
 
 <section id="projects">
 
+
   <mat-grid-list
     cols="1">
 
     <mat-grid-tile>
 
-      <app-project-entry>
+      <app-project-entry
+        projectName="Billiards"
+        technologies="C++, olcPixelGameEngine"
+        githubLink=""
+        imgPath="">
+
+          test
 
       </app-project-entry>
 
