--- a/web-portfolio-2024/src/app/main-page/projects/projects.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/projects.component.html
@@ -10,8 +10,8 @@
       <app-project-entry
         projectName="Billiards"
         technologies="C++, olcPixelGameEngine"
-        githubLink=""
-        imgPath="">
+        githubLink="https://github.com/BenTaylor25/Billiards"
+        imgPath="assets/projects/BilliardsScreenshot.jpg">
 
           test
 
