added Billiards description

--- a/web-portfolio-2024/src/app/main-page/projects/project-entry/project-entry.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/project-entry/project-entry.component.html
@@ -12,7 +12,7 @@
           <h1>{{projectName}}</h1>
         </a>
 
-        <h2>{{technologies}}</h2>
+        <h2>Technologies: {{technologies}}</h2>
 
         <ng-content />
 
