--- a/web-portfolio-2024/src/app/main-page/projects/projects.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/projects.component.html
@@ -13,7 +13,14 @@
         githubLink="https://github.com/BenTaylor25/Billiards"
         imgPath="assets/projects/BilliardsScreenshot.jpg">
 
-          test
+        <p>
+          Billiards was my A-Level Computer Science project.
+          I was also studying Further Maths at the time, where Elastic Collisions
+          in Two Dimensions was a topic that I wanted to get a head start on,
+          so I chose to adopt it into my programming project.
+          It was my first time using C++, and I had to find a suitable
+          graphics / mouse-input library and implement rotation matrix logic in code.
+        </p>
 
       </app-project-entry>
 
