--- a/web-portfolio-2024/src/app/main-page/projects/projects.component.html
+++ b/web-portfolio-2024/src/app/main-page/projects/projects.component.html
@@ -11,7 +11,8 @@
         projectName="Billiards"
         technologies="C++, olcPixelGameEngine"
         githubLink="https://github.com/BenTaylor25/Billiards"
-        imgPath="assets/projects/BilliardsScreenshot.jpg">
+        imgPath="assets/projects/BilliardsScreenshot.jpg"
+      >
 
         <p>
           Billiards was my A-Level Computer Science project.
@@ -20,6 +21,29 @@
           so I chose to adopt it into my programming project.
           It was my first time using C++, and I had to find a suitable
           graphics / mouse-input library and implement rotation matrix logic in code.
+        </p>
+
+      </app-project-entry>
+
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+
+      <app-project-entry
+        projectName="DSAVisualiser"
+        technologies="Java, LibGDX"
+        githubLink="https://github.com/BenTaylor25/DSAVisualiser"
+        imgPath="assets/projects/DSAVisualiserScreenshot.jpg"
+      >
+
+        <p>
+          At the end of my second semester at university, I was already looking ahead to
+          the modules that I would be studying the following year.
+          One of which was Data Structures and Algorithms - an extremely important topic
+          for problem solving and interviews.
+          I decided to make an interactive visualisation tool to help others on my course.
+          I have since created a YouTube series on Data Structures and Algorithms which
+          uses the application.
         </p>
 
       </app-project-entry>
